Bug 91592 - WRITER crashes when navigating through comments
Summary: WRITER crashes when navigating through comments
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Philippe Jung
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-24 19:47 UTC by Juanjo
Modified: 2016-10-25 19:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document with text, tables, pictures and comments (124.35 KB, application/vnd.oasis.opendocument.text)
2015-05-24 19:47 UTC, Juanjo
Details
Linux 5.1 master backtrace (4.19 KB, text/plain)
2015-05-25 12:38 UTC, Matthew Francis
Details
Linux 5.1 master backtrace [2] (10.02 KB, text/plain)
2015-05-25 12:39 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juanjo 2015-05-24 19:47:08 UTC
Created attachment 115997 [details]
Test document with text, tables, pictures and comments

Steps:
1. Open the attached document (test.odt)
2. Edit > Find
3. Navigate by
4. Navigate by tables
5. Navigate by pictures
6. Navigate by comments
Result: LO WRITER crashes
Comment 1 Matthew Francis 2015-05-25 12:38:19 UTC
Confirmed on Linux 5.1 master (0359a59b6dec4a3c1e8fdc6e51d179fd6db4aad7)

To clarify the instructions in comment 0:

1. Open attachment 115997 [details]
2. Open the find bar (Edit - Find)
3. Click on "Navigate by" on the find bar
4. In the small "Navigation" window (not the large "Navigator" window or the equivalent on the sidebar - see also bug 79167), select "Table"
5. Navigate up and down with the arrows on the find bar
6. Repeat 4 and 5 for "Graphics" (* this should have been renamed "Images" for consistency with other UI elements)
7. Repeat 4 and 5 for "Comment"

I got two different backtraces doing this, which I will attach
Comment 2 Matthew Francis 2015-05-25 12:38:48 UTC
Created attachment 116015 [details]
Linux 5.1 master backtrace
Comment 3 Matthew Francis 2015-05-25 12:39:50 UTC
Created attachment 116016 [details]
Linux 5.1 master backtrace [2]

This one looks like it's dbgutil only
Comment 4 Philippe Jung 2015-05-27 15:03:56 UTC
"Simpler" way to reproduce: display the Navigation toolbox, step 1 2 and 3 from comment 1
Select the big image page 1
Select Comment in Navigation
Clic on "Move Up" arrow

Crash in sw/source/core/crsr/crstrvl.cxx:703 because pTNd is null

        const SwPosition& rPos = *pCrsr->GetPoint();

        SwTextNode* pTNd = rPos.nNode.GetNode().GetTextNode();
        OSL_ENSURE( pTNd, "No ContentNode" );

I presume an image node has no TextNode
Comment 5 Philippe Jung 2015-05-28 15:48:46 UTC
Fix: https://gerrit.libreoffice.org/15952
Comment 6 Commit Notification 2015-06-02 08:08:03 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4826007f0e09160ffdb592d10b65eb262ada18c8

tdf#91592 WRITER crashes when navigating through comments

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-06-02 10:52:08 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=260a4a63d16a01842b50a15e51e08590dbbb75a4&h=libreoffice-5-0

tdf#91592 WRITER crashes when navigating through comments

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.