tdf#91592 WRITER crashes when navigating through comments

without rSh.EnterStdMode, the image is selected and it has no GetTextNode.

Change-Id: I91ed5a1ed002a04919042f4df22c49d3189daccd
Reviewed-on: https://gerrit.libreoffice.org/15952
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 4826007f0e09160ffdb592d10b65eb262ada18c8)
Reviewed-on: https://gerrit.libreoffice.org/16031